2002-05-31  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::open): Make default open mode == binmode.
	(fhandler_base::init): Set open flags based on derived binmode argument.

2002-05-31  Christopher Faylor  <cgf@redhat.com>

	* dll_init.cc (dll_list::init): Eliminate unneeded debugging statement.

2002-05-31  Christopher Faylor  <cgf@redhat.com>

	* fhandler_proc.cc (fhandler_proc::readdir): Set errno when no more
	files.
	* fhandler_process.cc (fhandler_process::readdir): Ditto.
	* fhandler_registry.cc (fhandler_registry::readdir): Ditto.

2002-05-30  Christopher Faylor  <cgf@redhat.com>

	* path.cc (path_conv::check): Set fileattr to INVALID_FILE_ATTRIBUTES
	for nonexistent virtual device path.
	(chdir): Set correct errno when attempt is made to cd to nonexistent
	virtual device path.

2002-05-30  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::fstat): Always call
	fstat_by_name if fd is not opened to allow fstat_by_name to properly
	set errno.

2002-05-30  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc: Replace autoload statments for ZwXXX by NtXXX.
	Drop ZwQuerySystemInformation since NtQuerySystemInformation was
	already available.
	* fhandler_proc.cc (format_proc_uptime): Replace call to
	ZwQuerySystemInformation by call to NtQuerySystemInformation.
	(format_proc_stat): Ditto.
	* fhandler_process.cc (format_process_stat): Replace call to
	ZwQueryInformationProcess by call to NtQueryInformationProcess.
	(get_process_state): Ditto.
	(get_mem_values): Ditto.  Replace call to ZwQueryVirtualMemory by
	call to NtQueryVirtualMemory.
	* ntdll.h: Cleanup.  Drop ZwQuerySystemInformation since
	NtQuerySystemInformation was already available.  Replace declarations
	of ZwXXX functions by declarations of NtXXX.
	* pinfo.cc (winpids::enumNT): Replace call to ZwQuerySystemInformation
	by call to NtQuerySystemInformation.

2002-05-29  Christopher Faylor  <cgf@redhat.com>
