@@ -1,5 +1,13 @@
 2002-05-31  Christopher Faylor  <cgf@redhat.com>
 
+	* fhandler_console.cc (fhandler_console::open): Always default to
+	binmode.
+	(fhandler_console::write_normal): Don't honor binmode setting.  There
+	is already a termios setting for this.
+	(fhandler_console::init): Correct argument order in init call.
+
+2002-05-31  Christopher Faylor  <cgf@redhat.com>
+
 	* fhandler.cc (fhandler_base::open): Make default open mode == binmode.
 	(fhandler_base::init): Set open flags based on derived binmode argument.
 
